# gazelle

./: .gitmodules  Cargo.toml  DESIGN.md  DESIGN_TRAIT_API.md  LICENSE  README.md  RESUME_STATE.md  TODO.md  bootstrap.sh  c11.gzl  meta.gzl
.github/workflows/: ci.yml
blog/: runtime-precedence.md
c11/: Cargo.toml
c11/src/: ast.rs  codegen.rs  grammar.rs  lexer.rs  lib.rs  main.rs  typecheck.rs  types.rs
c11/tests/: codegen.rs  parse.rs
docs/: reference.md  tutorial-c11-calculator.md
examples/: auto_lexer.rs  c11_calculator.rs  c11_expr_eval.rs  calculator.rs  compare_lr.rs  debug_automaton.rs  expr.gzl  expr_eval.rs  expr_tokens.txt  hello.rs  lexer_dfa.rs  modifiers.rs  runtime_grammar.rs
examples/c11/: README.md  compare_errors.sh  main.rs
examples/c11/error_cases/: extra_token.c  missing_rbrace.c  missing_rparen.c  missing_semi.c  missing_semi_multi.c  wrong_token.c
examples/conflicts/: ambiguous_expr.gzl  associativity.gzl  dangling_else.gzl  non_unifying.gzl  reduce_reduce.gzl
examples/python/: main.rs
gazelle-core/: Cargo.toml  meta.gzl
gazelle-core/src/: grammar.rs  lib.rs  lr.rs  meta_bootstrap.rs  meta_generated.rs
gazelle-core/src/codegen/: mod.rs  parser.rs  reduction.rs  table.rs  terminal.rs
gazelle-macros/: Cargo.toml
gazelle-macros/src/: ir.rs  lib.rs  parse.rs  validate.rs
gazelle-macros/src/codegen/: mod.rs  parser.rs  reduction.rs  table.rs  terminal.rs
gazelle-macros/tests/: macro_test.rs  test.gzl
grammars/: ansi-c11.gzl  c11.gzl  meta.gzl  python.gzl  regex.gzl
python/: Cargo.toml
python/src/: grammar.rs  lexer.rs  lib.rs
src/: automaton.rs  grammar.rs  lexer.rs  lib.rs  lr.rs  main.rs  meta.rs  meta_generated.rs  regex.rs  regex_generated.rs  runtime.rs  table.rs
src/codegen/: lexer.rs  mod.rs  parser.rs  reduction.rs  table.rs  terminal.rs
src/lr/: grammar_conflict.rs  mod.rs
tests/: bootstrap_from_scratch.rs  error_messages.rs  fallible_actions.rs  macro_test.rs  meta_generated_up_to_date.rs  precedence_equivalence.rs  recovery.rs  regex_generated_up_to_date.rs
