[workspace]
members = [".", "gazelle-macros"]

[package]
name = "gazelle-parser"
version = "0.9.1"
edition = "2024"
license = "MIT"
description = "LR parser generator with runtime operator precedence and natural lexer feedback"
repository = "https://github.com/gerben-stavenga/gazelle"
keywords = ["parser", "lr", "grammar", "parsing", "lalr"]
categories = ["parsing", "development-tools"]
readme = "README.md"
exclude = ["examples/c11/C11parser"]

[lib]
name = "gazelle"

[[bin]]
name = "gazelle-parser"
required-features = ["codegen"]

[features]
default = ["codegen", "regex"]
regex = []
codegen = ["dep:quote", "dep:proc-macro2", "dep:syn", "dep:prettyplease"]

[dependencies]
syn = { version = "2", features = ["full"], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
prettyplease = { version = "0.2", optional = true }

[dev-dependencies]
gazelle-macros = { path = "gazelle-macros" }
