[package]
name = "gazelle-macros"
version = "0.9.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Procedural macros for the Gazelle parser generator"
repository = "https://github.com/gerben-stavenga/gazelle"
keywords = ["parser", "lr", "grammar", "macro"]
categories = ["parsing", "development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
gazelle = { version = "0.9.1", path = "..", package = "gazelle-parser", default-features = false, features = ["codegen"] }

[dev-dependencies]
gazelle = { version = "0.9.1", path = "..", package = "gazelle-parser" }
